fix for layout breaking when using 'graphics as pins'

--- a/less/hotgraphic.less
+++ b/less/hotgraphic.less
@@ -2,6 +2,7 @@
 
 	.hotgraphic-graphic {
 		position: relative;
+		width: 100%;
 	}
 
 	.hotgraphic-graphic-pin {
